@@ -105,7 +105,7 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2015-10-14 17:59:35 L.78 '21625 T2398067898.K ~920 +----+----+----+----+----+
+     Zndex_E : //z 2015-10-15 09:11:31 L.77 '53309 T1080036716.K ~923 +----+----+----+----+----+
      TimeCnt : //z 2015-10-14 15:40:12 L.78 '29988 T4108589833.K ~51  +----+----+----+----+----+
      Reg.Cnt : //z 2015-10-08 17:41:19 L.84 '22721 T430354486 .K ~36  +----+----+----+----+----+
      #36  R+ : //z 2015-10-08 17:41:19 L.84 '22721 T430354486 .K ~36    V+.920  L+.972  
@@ -148,7 +148,7 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-10-14 17:59:35 L.78 '21625 T2398067898.K ~956   R+.36   L+.1011 --+----+
+     Version : //z 2015-10-15 09:11:31 L.77 '53309 T1080036716.K ~959   R+.36   L+.1014 --+----+
      #50  V+ : //z 2015-10-14 15:40:13 L.78 '29987 T4108589834.K ~950   R+.36   L+.1006 
      #49  V+ : //z 2015-10-08 17:56:56 L.84 '21784 T431720221 .K ~931   R+.16   L+.469  
      #48  R+ : //z 2015-10-08 17:41:19 L.84 '22721 T430354486 .K ~920   R+.36   L+.973  V+.920  
@@ -1010,4 +1010,7 @@ http://www.bennychen.cn/2011/06/game-loop-model/
 
 book
 Advanced 3D Game Programming with DirectX 10.0
+
+irrlicht 引擎
+http://irrlicht.sourceforge.net/docu/pages.html
 #endregion //z 2015-10-08 17:41:19 L.84 '22721 BG57IV3@XCL T430354486 .K.F4146951713-+----+----+
